sampleplugin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issugen-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: issuegen-plugin-app.ds.opsmx.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rollout-plugin-app
            port:
              number: 8085
